--- a/angularHolaMundo/src/app/app.component.html
+++ b/angularHolaMundo/src/app/app.component.html
@@ -339,6 +339,8 @@
   </div>
 
   <!-- Resources -->
+  <h1 class="nombre">Leandro Ramirez</h1>
+  <app-primer-componente></app-primer-componente>
   <h2>Resources</h2>
   <p>Here are some links to help you get started:</p>
 
